--- a/2022年2月13日/timer.html
+++ b/2022年2月13日/timer.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>计时程序</title>
-    <script src="https://unpkg.com/vue@next"></script>
+    <!-- <script src="https://unpkg.com/vue@next"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
 
 <body>
     <div id="app">
-        <button>正向计时</button>
-        <button>反向计时</button>
+        <button @click="timer">正向计时</button>
+        <button @click="backtimer">反向计时</button>
         <span>{{num}}</span>
     </div>
     <script>
